Closed
Bug 801723
Opened 13 years ago
Closed 13 years ago
nsJSIID::HasInstance shouldn't assume that any WebIDL binding object that's nsISupports has classinfo
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: bzbarsky, Assigned: bzbarsky)
Details
Attachments
(1 file)
|
1.22 KB,
patch
|
peterv
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Because it just ain't true.
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #671484 -
Flags: review?(peterv)
| Assignee | ||
Comment 2•13 years ago
|
||
I think we need this on branches, in general....
Updated•13 years ago
|
Attachment #671484 -
Flags: review?(peterv) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Flags: in-testsuite?
Whiteboard: [need review]
Target Milestone: --- → mozilla19
| Assignee | ||
Comment 4•13 years ago
|
||
Comment on attachment 671484 [details] [diff] [review]
WebIDL binding objects may not have classinfo even if they're nsISupports.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Initial WebIDL bindings landing
User impact if declined: Null-deref crashes that content can trigger
Testing completed (on m-c, etc.): Passes tests and all that.
Risk to taking this patch (and alternatives if risky): Low risk: just a null-check
String or UUID changes made by this patch: None
Attachment #671484 -
Flags: approval-mozilla-beta?
Attachment #671484 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Comment 5•13 years ago
|
||
Updated•13 years ago
|
Attachment #671484 -
Flags: approval-mozilla-beta?
Attachment #671484 -
Flags: approval-mozilla-beta+
Attachment #671484 -
Flags: approval-mozilla-aurora?
Attachment #671484 -
Flags: approval-mozilla-aurora+
Comment 6•13 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/58ba9dc8ea5a
https://hg.mozilla.org/releases/mozilla-beta/rev/e581c5d6a288
status-firefox17:
--- → fixed
status-firefox18:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•