Bug 801723 - WebIDL binding objects may not have classinfo even if they're nsISupports. r=peterv, a=lsblakk