js/xpconnect/src/XPCJSID.cpp
@@ -491,6 +491,10 @@ nsJSIID::HasInstance(nsIXPConnectWrappedNative *wrapper,
 
         if (identity) {
             nsCOMPtr<nsIClassInfo> ci = do_QueryInterface(identity);
+            if (!ci) {
+                // No classinfo means we're not implementing interfaces and all
+                return NS_OK;
+            }
 
             XPCCallContext ccx(JS_CALLER, cx);
 
